# bearmod

./: .ai-arch-allowlist.txt  .gitignore  BEARMOD_REFACTOR_SUMMARY.md  CONTRIBUTING.md  JNI_FIX_SUMMARY.md  MIGRATION_LOG.md  README.md  build.gradle  build.gradle.kts  build_output.txt  gradle.properties  jni_checker.py  jni_validation_report.txt  jni_validator.py  keyauth_analysis_report.md  keyauth_debug_test.py  project.md  settings.gradle  settings.gradle.kts  signing.gradle  test_license_persistence.py
.augment/rules/: Agent CLI Prompt.md  Agent Prompt v1.0.md  Agent Prompt v1.2.md  Chat Prompt.md  DEPLOYMENT_READINESS_CHECKLIST.md  Memory Prompt.md  Memory Rating Prompt.md  project-overview.md
.cursor/rules/: jni-debugging.mdc  jni-management.mdc  launcher-migration.mdc  plugin-system.mdc  start-crash-debug.mdc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ai-architecture-check.yml  android-ci.yml  code-quality.yml  codeql.yml  project-board-automation.yml
.kilocode/: mcp.json
.windsurf/workflows/: README.md  development.yml  jni_change.yml  release.yml
app/: build.gradle  build.gradle.kts  checkstyle.xml  jni_validation_report.txt  proguard-rules.pro
app/obf/: class_dict.txt  package_dict.txt
app/release/: output-metadata.json
app/src/test/cpp/: CMakeLists.txt  jni_utils_test.cpp
buildSrc/: build.gradle.kts
build_logs/: assembleDebug_last.txt
docs/: CI_SETUP.md  DEVELOPMENT_RULES.md  ROOTED_TEST_CHECKLIST.md  TESTING_GUIDE.md  WORKFLOW.md
docs/snippet/: APIMockSkeleton.md  JNIMethodSample.md  JavadocFunctionSample.md  (+2 more)
gradle/: libs.versions.toml
mundo_core/: build.gradle  proguard-rules.pro
mundo_core/src/main/cpp/: CMakeLists.txt
mundo_core/src/main/cpp/api/: mundo_api.cpp
mundo_core/src/main/cpp/core/: mundo_core.cpp  mundo_core.h
mundo_core/src/main/cpp/include/mundo/: mundo_api.h  mundo_internal.h
mundo_core/src/main/cpp/jni/: mundo_jni_bridge.cpp
reports/: ai_report.txt
scripts/: check_architecture.py
(+176 files in other folders)
